worked on ChaosGameFileHandler